istio-rollouts/guestbook-ui-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: guestbook-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
        name: guestbook-ui
        ports:
        - containerPort: 80
  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService:
            name: guestbook-ui
          destinationRule:
            name: guestbook-ui
            stableSubsetName: stable
            canarySubsetName: canary
      steps:
        - setWeight: 5
        - pause:
            duration: 10m
        - setWeight: 50
        - pause:
            duration: 10m
